src/objects/Translator__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Translators</relationshipLabel>
        <relationshipName>Translators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fordítóiroda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bankszámlaszám</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Város</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Ország</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Name__c</fullName>
        <label>Számlázási név</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Postal_Code__c</fullName>
        <label>Irányítószám</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Utca, házszám</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAT_Tool__c</fullName>
        <label>Fordítástámogató szoftver</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SDL Trados</fullName>
                </value>
                <value>
                    <fullName>Wordfast</fullName>
                </value>
                <value>
                    <fullName>STAR Transit</fullName>
                </value>
                <value>
                    <fullName>Déja Vu</fullName>
                </value>
                <value>
                    <fullName>MemoQ</fullName>
                </value>
                <value>
                    <fullName>MetaTexis</fullName>
                </value>
                <value>
                    <fullName>Across</fullName>
                </value>
                <value>
                    <fullName>Egyéb</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Szakfordítói oklevél</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Megjegyzések</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Kapcsolattartó</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Translators</relationshipLabel>
        <relationshipName>Translators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nem kaphat megbízást</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Editor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Editálás</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Field_Excluded__c</fullName>
        <label>Kizárt szakterületek</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AGR</fullName>
                </value>
                <value>
                    <fullName>BIZT</fullName>
                </value>
                <value>
                    <fullName>ELEKTR</fullName>
                </value>
                <value>
                    <fullName>ÉLELM</fullName>
                </value>
                <value>
                    <fullName>ENERG</fullName>
                </value>
                <value>
                    <fullName>ÉPIP</fullName>
                </value>
                <value>
                    <fullName>EÜ</fullName>
                </value>
                <value>
                    <fullName>PÜ</fullName>
                </value>
                <value>
                    <fullName>GAZD</fullName>
                </value>
                <value>
                    <fullName>GÉPIP</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>JOG</fullName>
                </value>
                <value>
                    <fullName>KÖRNY</fullName>
                </value>
                <value>
                    <fullName>KÖZL</fullName>
                </value>
                <value>
                    <fullName>KULT</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>SZÁLL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Szakterületek</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AGR</fullName>
                </value>
                <value>
                    <fullName>BIZT</fullName>
                </value>
                <value>
                    <fullName>ELEKTR</fullName>
                </value>
                <value>
                    <fullName>ÉLELM</fullName>
                </value>
                <value>
                    <fullName>ENERG</fullName>
                </value>
                <value>
                    <fullName>ÉPIP</fullName>
                </value>
                <value>
                    <fullName>EÜ</fullName>
                </value>
                <value>
                    <fullName>PÜ</fullName>
                </value>
                <value>
                    <fullName>GAZD</fullName>
                </value>
                <value>
                    <fullName>GÉPIP</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>JOG</fullName>
                </value>
                <value>
                    <fullName>KÖRNY</fullName>
                </value>
                <value>
                    <fullName>KÖZL</fullName>
                </value>
                <value>
                    <fullName>KULT</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>SZÁLL</fullName>
                </value>
                <value>
                    <fullName>OKIRAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interpreter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tolmácsolás</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimum_Wage__c</fullName>
        <label>Minimális díj (alapár)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobil</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Native_Language_Proofreading__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anyanyelvi lektorálás</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Telefonszám</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Proofreading__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lektorálás</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quality_Rating__c</fullName>
        <description>Tízes skálán</description>
        <label>Minősítés</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Másodlagos email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_Mobile__c</fullName>
        <label>Secondary Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Skype_Id__c</fullName>
        <label>Skype név</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Korrektúra</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>imp_languages__c</fullName>
        <label>imp_languages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>imp_price__c</fullName>
        <label>imp_price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Translator</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>imp_languages__c</columns>
        <columns>Field__c</columns>
        <columns>CAT_Tool__c</columns>
        <columns>Deactivated__c</columns>
        <columns>Interpreter__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>hu</language>
    </listViews>
    <listViews>
        <fullName>Tolmacsok</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interpreter__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Tolmacsok</label>
    </listViews>
    <nameField>
        <label>Név</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Translators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>